# calc_pack_sdiaz

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: test.yml
calc_pack_sdiaz/: __main__.py  calculator.py
calc_pack_sdiaz/file_calculator/: __init__.py  file_calculator.py  nums.csv
calc_pack_sdiaz/tests/: test_file_calculator.py
scripts/: run.py
